2011-06-03 Refactored the Java AST. CatchClause is now an abstract base class
for BasicCatch, which fills the same role that CatchClause previously had.

2011-05-12 Modified build files to use sufficient heap when running JastAdd.

2011-04-01 errors and warnings are printed on stderr instead of stdout
