@@ -1,0 +1,12 @@
+<project name="JastAddJ" default="build">
+	<target name="clean" description="clean all JastAddJ modules">
+		<ant antfile="Java1.4Frontend/build.xml" target="clean"
+			inheritAll="false"/>
+		<ant antfile="Java1.4Backend/build.xml" target="clean"
+			inheritAll="false"/>
+		<ant antfile="Java1.5Frontend/build.xml" target="clean"
+			inheritAll="false"/>
+		<ant antfile="Java1.5Backend/build.xml" target="clean"
+			inheritAll="false"/>
+	</target>
+</project>
