@@ -5,3 +5,5 @@ for BasicCatch, which fills the same role that CatchClause previously had.
 
 2011-04-01 errors and warnings are printed on stderr instead of stdout
 
+2011-08-09 added build file to root JastAddJ directory with clean target
+
